--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "normalize.css": "^8.0.0",
     "querystringify": "^1.0.0",
     "react-color": "^2.13.8",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "webfontloader": "^1.6.28"
   },
   "keywords": [
     "gatsby",
